--- a/project/css/project.css
+++ b/project/css/project.css
@@ -53,6 +53,19 @@ footer {
 	width: 100%;
 	/*float:left;*/
 }
+.hidden {
+    display: none;
+}
+
+div.tooltip {
+    color: #222;
+    background-color: #fff;
+    padding: .5em;
+    text-shadow: #f5f5f5 0 1px 0;
+    border-radius: 2px;
+    opacity: 0.9;
+    position: absolute;
+}
 
 #container4 {
 	width: 100%;
@@ -60,16 +73,24 @@ footer {
 	/*float: right;*/
 	overflow: scroll;
 }
+
+/*tbody {
+	overflow: scroll;
+}*/
 	
 /* legenda */
 
 .datamaps-legend {
 	text-align: center;
 	position: relative;
-  	top: 40px;
-  	left: 320px;
+  	top: 10px;
+  	margin-left: 10%;
   	bottom: 565px;
-  	width: 850px;
+  	width: 80%;
+}
+
+.datamaps-legend h2 {
+	font-size: 20px;
 }
 
 .datamaps-legend dl {
@@ -77,13 +98,17 @@ footer {
 }
 
 /*dropdown menu*/
-.btn.btn-primary.dropdown-toggle {
-	left: 800%;
+/*.btn.btn-primary.dropdown-toggle {
+	position: absolute;
+	top: 0;
+	right: 0;
 }
 
 .dropdown-menu {
-	left: 800%;
-}
+	position: absolute;
+	top: 0;
+	right: 0;
+}*/
 
 /*TABLE*/
 #myInput {
