--- a/project/css/project.css
+++ b/project/css/project.css
@@ -11,13 +11,14 @@ Number: 10654976
 .jumbotron {
   	margin-bottom: 0;
   	margin: 0 auto;
-  	max-height: 150px;
+  	max-height: 100px;
   	width: 100%;
 }
 
 .jumbotron h1 {
 	font-size: 40px;
-	margin-top: 0px;
+	margin-top: 0;
+	margin-bottom: 0;
 }
 
 /*FOOTER*/
@@ -40,12 +41,6 @@ footer {
 }
 */
 /*WORLDMAP*/
-.map.table {
-	position: relative;
-	width: inherit;
-	height: 780px;	
-}
-
 #container1 {
 	/*width: 60%;*/
 	height: 500px;
@@ -140,18 +135,18 @@ th.aes:after {
 .barcharts {
 	position: relative;
 	width: inherit;
-	height: 400px;
+	/*height: 400px;*/
 }
 
 #container2 {
 	width: 100%;
-	height: 300px;
+	/*height: 300px;*/
 	/*float: left;*/
 }
 
 #container3 {
 	width: 100%;
-	height: 300px;
+	/*height: 300px;*/
 	/*float: right;*/
 }
 
@@ -178,10 +173,6 @@ body {
   	fill-opacity: .9;
 }
 
-.bar:hover {
-	fill: yellow;
-}
-
 .x.axis path {
   	display: none;
 }
@@ -191,3 +182,8 @@ label {
 	top: 10px;
 	right: 10px;
 }
+
+/*.btn.btn-default {
+	background: rgb(240, 240, 240);
+}*/
+
