--- a/project/css/project.css
+++ b/project/css/project.css
@@ -28,30 +28,25 @@ footer {
   	padding: 25px;
 }
 
-/*DROPDOWN MENU*/
-
-/*.button.btn.btn-primary {
-	background-color: white;
-	color: black;
-}*/
-/*.dropdown-menu {
-    position: absolute;
-    left: 1000px;
-    top: 40px;
-}
-*/
-/*WORLDMAP*/
-#container1 {
-	/*width: 60%;*/
-	height: 500px;
-	position: relative;
-	width: 100%;
-	/*float:left;*/
-}
-.hidden {
-    display: none;
+/*GENERAL*/
+body {
+  	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  	position: relative;
+  	width: 100%;
 }
 
+.source a {
+	font-size: 11px;
+	stroke: #999999;
+	stroke-width: 0.4;
+}
+
+/*DROPDOWN*/
+.dropdown-menu {
+	z-index: 1001;
+}
+
+/*TOOLTIP*/
 div.tooltip {
     color: #222;
     background-color: #fff;
@@ -62,21 +57,19 @@ div.tooltip {
     position: absolute;
 }
 
-#container4 {
-	width: 100%;
-	height: 500px;
-	/*float: right;*/
-	overflow: scroll;
+.hidden {
+    display: none;
 }
 
-/*tbody {
-	overflow: scroll;
-}*/
-	
-/* legenda */
+/*WORLDMAP*/
+#container1 {
+	height: 500px;
+	position: relative;
+	width: 100%;
+	/*z-index: -1;*/
+}
 
 .datamaps-legend {
-	/*text-align: center;*/
 	position: fixed;
   	top: 10px;
   	margin-left: 10%;
@@ -86,44 +79,55 @@ div.tooltip {
 
 .datamaps-legend h2 {
 	font-size: 20px;
-	/*margin-right: 300px;*/
 }
 
 .datamaps-legend dl {
 	margin-left: 30px;
-	/*text-align: center;*/
-	/*text-anchor: right;*/
 }
 
-/*dropdown menu*/
-/*.btn.btn-primary.dropdown-toggle {
-	position: absolute;
-	top: 0;
-	right: 0;
+/*BARCHART*/
+#container2 {
+	width: 100%;
 }
 
-.dropdown-menu {
-	position: absolute;
-	top: 0;
-	right: 0;
-}*/
+.bar {
+  	fill: steelblue;
+  	fill-opacity: .9;
+}
+
+/*SCATTERPLOT*/
+#container3 {
+	width: 100%;
+}
+
+/*BARCHART & SCATTERPLOT*/
+.axis path,
+.axis line {
+  	fill: none;
+  	stroke: #000;
+  	shape-rendering: crispEdges;
+}
 
 /*TABLE*/
-#myInput {
-    background-image: url('searchicon.png'); /* Add a search icon to input */
-    background-size: 5%;
-    background-position: 8px 10px; /* Position the search icon */
-    background-repeat: no-repeat; /* Do not repeat the icon image */
-    width: 80%; /* Full-width = 100% */
-    font-size: 16px; /* Increase font-size */
-    padding: 12px 20px 12px 40px; /* Add some padding */
-    border: 1px solid #ddd; /* Add a grey border */
-    margin-bottom: 12px; /* Add some space below the input */
+#container4 {
+	width: 100%;
+	height: 500px;
+	overflow: scroll;
 }
 
+#myInput {
+    background-image: url('searchicon.png');
+    background-size: 10%;
+    background-position: 8px 10px;
+    background-repeat: no-repeat;
+    width: 80%;
+    font-size: 16px;
+    padding: 12px 20px 12px 40px; 
+    border: 1px solid #ddd;
+    margin-bottom: 12px;
+}
 
-
-/*Table sorting*/
+/*TABLE SORT*/
 th.des:after {
   	content: "\21E9";
 }
@@ -133,63 +137,9 @@ th.aes:after {
 }
 
 
-/*BARCHART*/
-
-.barcharts {
-	position: relative;
-	width: inherit;
-	/*height: 400px;*/
-}
-
-#container2 {
-	width: 100%;
-	/*height: 300px;*/
-	/*float: left;*/
-}
-
-#container3 {
-	width: 100%;
-	/*height: 300px;*/
-	/*float: right;*/
-}
 
 
-body {
-  	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  	position: relative;
-  	width: 100%;
-}
 
-.axis text {
-  	font: 10px sans-serif;
-}
 
-.axis path,
-.axis line {
-  	fill: none;
-  	stroke: #000;
-  	shape-rendering: crispEdges;
-}
 
-.bar {
-  	fill: steelblue;
-  	fill-opacity: .9;
-}
-
-.x.axis path {
-  	display: none;
-}
-
-label {
-	position: absolute;
-	top: 10px;
-	right: 10px;
-}
-
-.source a {
-	font-size: 11px;
-	/*stroke: #8c8c8c;*/
-	stroke: #999999;
-	stroke-width: 0.4;
-}
 
