--- a/project/css/project.css
+++ b/project/css/project.css
@@ -11,7 +11,7 @@ Number: 10654976
 .jumbotron {
   	margin-bottom: 0;
   	margin: 0 auto;
-  	max-height: 100px;
+  	max-height: 200px;
   	width: 100%;
 }
 
@@ -19,6 +19,10 @@ Number: 10654976
 	font-size: 40px;
 	margin-top: 0;
 	margin-bottom: 0;
+}
+
+.jumbotron p {
+	font-size: 15px;
 }
 
 /*FOOTER*/
@@ -72,7 +76,7 @@ div.tooltip {
 .datamaps-legend {
 	position: fixed;
   	top: 10px;
-  	margin-left: 10%;
+  	margin-left: 25%;
   	bottom: 565px;
   	width: 80%;
 }
